# game-api

./: .gitignore  .gitmodules  .gitmodules222  .replit  LICENSE  README.md  game-api.json  game_api-endpoints.http  pyproject.toml
application/: .db  Dockerfile  dependencies.py  fly.toml  main.py  requirements.txt
application/controllers/: blockchain.py  data.py
application/interfaces/: repository_interface.py
application/routes/: api.py  audio.py  blockchain.py  bot.py  crypto.py  currency.py  mathematical.py  render.py
application/routes/crud/: lake.py  nosql.py  sql.py
application/routes/interfaces/: crud.py
application/routes/repository/: api.py  nosql.py  repository_nosql.py  repository_sql.py  sql.py
application/templates/: code.html  content.html  document.html  index.html  index2.html
application/templates/components/: .vue  HelloWorld.vue  Table.vue
application/templates/includes/: _footer.html  _header.html
application_test/: base_test.py  main_test.py
application_test/load/: data.json  stress-get.js  stress-post.js
application_test/routes_test/: repository_nosql_test.py  repository_sql_test.py  repository_test.py
application_test/routes_test/crud_test/: nosql_test.py  sql_test.py
application_test/routes_test/repository_test/: nosql_test.py  sql_test.py
infrastructure/: cmd  fastapi.yml  postgres.yml
test/: main_test.py
