[tool.poetry]
name = "repl_python3_game-api"
version = "0.1.0"
description = ""
authors = ["edson-dev <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "*"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
