[tool.poetry]
name = "repl_python3_game-api"
version = "0.1.0"
description = ""
authors = ["edson-dev"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "*"
replit = "^3.2.4"
sqlachemy = "^1.4"
dataset = "*"
psycopg2-binary = "*"
aiosqlite ="*"
python_dotenv = "*"
pymongo = "*"
httpx = "*"
mongoengine = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
